# Self-Project

./: README.md
Ice Cream Website/: README.md  features.html  index.html  order.html  register.html
Ice Cream Website/js/: order_validation.js  register_validation.js
Ice Cream Website/styles/: styles.css
Photography Portfolio/: .env.example  README.md  nuxt.config.ts  package-lock.json  package.json
Photography Portfolio/components/: AnimationPerformanceMonitor.vue  AnimationTestComponent.vue  ImageLightbox.vue  MobileAnimationTest.vue
Photography Portfolio/composables/: useAnimationMonitor.ts  useIntersectionAnimation.ts  useMobileAnimations.ts  useOptimizedAnimation.ts
Photography Portfolio/docs/: animation-monitoring.md  simplified-animations.md
Photography Portfolio/pages/: about.vue  index.vue  test-lightbox.vue  test-mobile-animations.vue
Recruitment Website For HR/: README.md
Software Vulnerability Detection (Reconnaise.ai)/: README.md  compose.yml
Software Vulnerability Detection (Reconnaise.ai)/api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
Software Vulnerability Detection (Reconnaise.ai)/api/backend/: .gitignore  README.md  app.py  export_comparison_visualizations.py  ml_detector.py  model_comparison.ipynb  requirements.txt  train_model.py  vuln_rules.py
Software Vulnerability Detection (Reconnaise.ai)/api/backend/data/: balanced_merged_dataset.csv  merged_all_datasets.csv
Software Vulnerability Detection (Reconnaise.ai)/api/backend/metadata/: datasets.json  model_descriptions.json  team_members.json
(+36 files in other folders)
