[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
demo = [
    "pyarrow>=18.0.0",
	"streamlit>=1.29.0"
]
training = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
